package pt.isep.psoft.aisafe.domain;

public enum ComponentCategory {
    ENGINE,
    AIRFRAME,
    AVIONICS,
    INTERIOR,
    EXTERIOR
}